--- a/src/Kodlama.io.Devs/Kodlama.io.Devs.Application/Application.csproj
+++ b/src/Kodlama.io.Devs/Kodlama.io.Devs.Application/Application.csproj
@@ -10,7 +10,7 @@
 		<ProjectReference Include="..\..\corePackages\Core.Application\Core.Application.csproj" />
 		<ProjectReference Include="..\..\corePackages\Core.CrossCuttingConcers\Core.CrossCuttingConcerns.csproj" />
 		<ProjectReference Include="..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
-		<ProjectReference Include="..\Kodlama.io.Devs.Domain\Domain.csproj" />
+		<ProjectReference Include="..\Kodlama.io.Devs.Domain\Kodlama.io.Devs.Domain.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
