--- a/src/Kodlama.io.Devs/WebAPI/appsettings.json
+++ b/src/Kodlama.io.Devs/WebAPI/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenOptions": {
+    "Auidence": "furkan@iscn.com",
+    "Issuer": "furkan@iscn.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "ConnectionStrings": {
     "KodlamaioDevsConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=KodlamaioDevsDb; Trusted_Connection=True;"
   },
